[package]
name = "xkcd-ascii"
version = "0.1.0"
authors = ["HKG <hkg902@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "*", features = ["json"] }
image = "0.22.3"
clap = "2.33.0"
serde_json = "1.0.44"
serde = { version = "1.0.104", features = ["derive"] }
rand = "0.7.2"